--- a/docs/src/ch01-02.md
+++ b/docs/src/ch01-02.md
@@ -93,11 +93,11 @@ rustup component add rust-src
 >
 > 如果你更换了另外一个 rustc 编译器（必须是 nightly 版的），**需要重新安装上述 rustc 所需软件包**。ArceOS 仓库中的 `Makefile` 包含了这些工具的安装，如果你使用 `make run` 也可以不手动安装。
 
-至于 Rust 开发环境，推荐 JetBrains Clion + Rust插件 或者 Visual Studio Code 搭配 rust-analyzer 和 RISC-V Support 插件。
+至于 Rust 开发环境，推荐 JetBrains RustRover 或者 Visual Studio Code 搭配 rust-analyzer 和 RISC-V Support 插件。
 
 > <font color=blue>**注解👉**</font>  
 >
-> JetBrains Clion 付费商业软件，但对于学生和教师，只要在 JetBrains 网站注册账号，可以享受一定期限（半年左右）的免费使用的福利。
+> JetBrains RustRover 付费商业软件，但对于学生和教师，只要在 JetBrains 网站注册账号，可以享受一定期限（半年左右）的免费使用的福利。
 >
 > - Visual Studio Code 是开源软件，不用付费就可使用。
 > - 当然，采用 VIM，Emacs 等传统的编辑器也是没有问题的。
